--- a/source/styles.css
+++ b/source/styles.css
@@ -1,5 +1,41 @@
-h1{
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+h1 {
     font-family: 'Raleway', sans-serif;
     margin-right: auto;
     text-align: center;
+    color: white;
+}
+p {
+    color: black;
+}
+
+h4 {
+    color: black;
+}
+
+#mission-statement {
+    text-align: center;
+}
+
+#header {
+    text-align: center;
+    background: url("images/johnny-milano.jpg") no-repeat center;
+    background-size: cover;
+    height: 500px;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    line-height: 10px;
+}
+
+#header h1 {
+    font-size: 100px;
+    font-family: 'Raleway', sans-serif;
+    margin-right: auto;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    padding-top: 250px;
 }
