--- a/styles.css
+++ b/styles.css
@@ -239,3 +239,20 @@ button{
   float:left;
   display: inline-block;
 }
+
+#donate-paypal-button{
+    font-size: 20px;
+    color: white;
+    margin: 30px;
+    border-radius: 5px;
+    border: 0px;
+    padding: 10px 30px 10px;
+    background-color: blue;
+}
+
+#donate-paypal-button:hover {
+    opacity: 1.0;
+    background-color: darkblue;
+    cursor: pointer;
+}
+
